<resources>
    <string name="common_err">%1$s</string>
    <string name="xposed_description">Fake XiaoMi Phone plugin, turn on if you need it.</string>
    <string name="allow">Allow</string>
    <string name="deny">Reject</string>
    <string name="log_push_err">Push service failed. Please try to disable the wake-up interception for the manager application, turn off some optimization feature of ROMs.</string>
    <string name="log_none">No logs yet.</string>
    <string name="log_share_error">Cannot share logs：%1$s</string>
    <string name="log_clear_done">Logs cleaned.</string>
    <string name="activity_intent_not_found">No application can handle this action.</string>
    <string name="log_share_title">Share log with</string>
    <string name="notification_group_config">Config</string>
    <string name="notification_category_alive">Push Status</string>
    <string name="notification_category_warning">Warning</string>
    <string name="notification_alive">Mi Push running</string>
    <string name="notification_group_applications">Applications</string>
    <string name="notification_stats_permission_title">Please grant usage stats permission</string>
    <string name="notification_stats_permission_text">We need usage rights to process your request, tap to grant permissions.</string>
    <string name="title_activity_keepalive">Push background activity</string>
    <string name="activity_rom_keepalive">Your device may intercept the operations of the push service, please add the "Push" application to whitelists (such as battery optimization, wake-up interception, etc.) in relevant settings of your ROM. You can also try to open the system\'s \"Recent Tasks\" interface and Lock this interface to keep the Push service running in the background.</string>
    <string name="see_pass_though_msg">Forwarded message, check it by opening the app.</string>
    <string name="notification_registerAllowed">Allowed "%1$s" register to MiPush</string>
    <string name="notification_registerRejected">Rejected "%1$s" register to MiPush</string>
    <string name="settings_clear">Clean up</string>
    <string name="title_activity_advance_setting">Advanced</string>
    <string name="settings_clear_history_summary">Cleanup logs for more than 7 days.</string>
    <string name="settings_clear_history">Cleanup logs</string>
    <string name="settings_clear_log">Clear logs</string>
    <string name="settings_clear_log_summary">Delete logs file.</string>
    <string name="settings_auto_register">Automatic registers</string>
    <string name="settings_options">Config</string>
    <string name="pref_title_access_mode">Foreground app detection mode</string>
    <string name="pref_summary_access_mode">It will be used when taps on Push notification.</string>
    <string-array name="pref_title_access_mode_list_titles">
        <item>UsageStats API (good performance, recommended)</item>
        <item>Accessibility mode (more compatibility)</item>
    </string-array>
    <string-array name="pref_title_access_mode_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="settings_icebox_not_installed">IceBox not installed</string>
    <string name="settings_icebox_permission">Auto enable app by IceBox</string>
    <string name="settings_icebox_permission_summary">Auto enable app by IceBox SDK.
        require IceBox( version > 3.6.0) installed </string>
    <string name="icebox_permission_granted">IceBox permission granted</string>
    <string name="settings_mock_notification">Simulate received a message</string>
    <string name="settings_mock_notification_summary">Tap to send a simulated test message.</string>
    <string name="debug_test_title">This is Title</string>
    <string name="debug_test_content">This is Content</string>
    <string name="accessibility_desc">Used for the alternate foreground application detection mode, higher compatibility, but poor performance.</string>
    <string name="settings_notify_on_register">Notify On App Register</string>
    <string name="app_name">MiPush Framework</string>
    <string name="enable">Enable</string>
    <string name="fail">Fail</string>
    <string name="apply">Apply</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="preference_title">Push Config</string>
    <string name="main_event">Logs</string>
    <string name="main_apps">Apps</string>
    <string name="main_settings">Configs</string>
    <string name="action_about">About</string>
    <string name="wizard_descr"><![CDATA[This project allows any devices to use XiaoMi system-level Push, it can control notifications from other apps to save more battery. For more details, visit the GitHub project:<a href="https://github.com/MiPushFramework/MiPushFramework">MiPushFramework</a>]]></string>
    <string name="wizard_connect">Connecting</string>
    <string name="wizard_title_run_in_background">Allow running in background</string>
    <string name="wizard_descr_run_in_background">You have disabled the Push service to run in the background, it will not be able to push in the background, you %1$s, then tap Next button.</string>
    <string name="run_in_background_appops_root">Need to use Root access to solve. (we will handle it automatically)</string>
    <string name="run_in_background_rikka_appops"><![CDATA[ need to open <b>App Ops</b> tool, and grant the <b>Run in the background or wake up</b> permissions ]]></string>
    <string name="rikka_appops_help_toast"><![CDATA[
Please grant the <b>Run in the background or wake up</b> permissions.
    ]]></string>
    <string name="wizard_title_stats_permission">Usage stats</string>
    <string name="wizard_title_stats_permission_text">You need to grant "Usage" permission or you will not be able to receive notifications.</string>
    <string name="wizard_descr_finish">Everything is ready. Enjoy!</string>
    <string name="status_ok">OK</string>
    <string name="status_deny_disable">Push disabled</string>
    <string name="status_deny_user">Rejected by you</string>
    <string name="date_just">Just Now</string>
    <plurals name="date_minutes">
        <item quantity="one">Minute</item>
        <item quantity="other">Minutes</item>
    </plurals>
    <plurals name="date_hours">
        <item quantity="one">Hour</item>
        <item quantity="other">Hours</item>
    </plurals>
    <plurals name="date_days">
        <item quantity="one">Day</item>
        <item quantity="other">Days</item>
    </plurals>
    <string name="date_format_normal">%1$s %2$s ago</string>
    <string name="date_format_just">%1$s</string>
    <string name="date_format_long">%1$s</string>
    <string name="action_edit_permission">Edit Permissions</string>
    <string name="permissions">Permissions</string>
    <string name="permission_allow_receive">Receive notification message</string>
    <string name="permission_allow_receive_command">Receive command</string>
    <string name="permission_allow_receive_register_result">Receive registration result (not implemented)</string>
    <string name="permission_notification_on_register">Show notification when registering</string>
    <string name="permission_summary_notification_on_register">In order to use, you need to enable global register notification switch in Advance Setting as well</string>
    <string name="permission_register_type">Register mode</string>
    <string name="register_type_allow">Allow registration, automatic</string>
    <string name="register_type_deny">Block registration</string>
    <string name="register_type_ask">Ask me (Default)</string>
    <string-array name="register_types">
        <item>@string/register_type_ask</item>
        <item>@string/register_type_allow</item>
        <item>@string/register_type_deny</item>
    </string-array>
    <string name="settings_enhance">Enhances</string>
    <string name="settings_service_setting">Push configs</string>
    <string name="settings_service_advance_setting">Advanced</string>
    <string name="settings_summary_service_advance_setting">Advanced configurations interface</string>
    <string name="settings_debug">Debug</string>
    <string name="settings_get_log">Get debugging logs</string>
    <string name="settings_get_log_summary">Tap to sharing logs file, submit it to your issue if you can.</string>
    <string name="recent_activity_view">View recent events</string>
    <string name="recent_activity_title">Recent events</string>
    <string name="action_help">Help</string>
    <string name="action_update">Check for update</string>
    <string name="update_toast">You can downloads the latest APKs from the Releases page.</string>
    <string name="application_info_label">App info</string>
    <string name="connect_fail_doze">Require removed from battery optimization</string>
    <string name="about_version">Version %1$s</string>
    <string name="app_registered">Registered</string>
    <string name="app_registered_error">Unregistered</string>
    <string name="request_battery_whitelist">Push app needs to be added to the \"Battery Optimization\" whitelist to run properly.</string>
    <string name="status_app_not_registered">Support but not registered</string>
    <string name="footer_app_ignored_not_registered">%1$s apps without MiPush SDK</string>
    <string name="status_app_not_registered_detail_without_fake_suggest"><![CDATA[
Registration is determined and initiated by the application and generally begins automatically when the application is launched. Some apps are only registered when finding a XiaoMi devices. See also: <b><a href="https://github.com/MiPushFramework/MiPushFramework/wiki/%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BC%8F%E6%B3%A8%E5%86%8C%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%88">应用程式注册问题解决方案</a></b> and <b><a href="https://github.com/MiPushFramework/MiPushFramework/wiki/%5B%E5%B8%AE%E5%8A%A9%5D-%E5%BA%94%E7%94%A8%E6%B3%A8%E5%86%8C%E9%97%AE%E9%A2%98">[帮助] 应用注册问题</a></b>.
    ]]></string>
    <string name="status_app_not_registered_detail_with_fake_suggest"><![CDATA[
Registration is determined and initiated by the application and generally begins automatically when the application is launched. Some apps are only registered when finding a XiaoMi devices, you can try <b><a href="https://github.com/Magisk-Modules-Repo/MiPushFake">Magisk global-level module</a></b> or <b><a href="https://github.com/TimothyZhang023/Riru-MiPushFake">Magisk apps-level module</a></b> to increase success. See also: <b><a href="https://github.com/MiPushFramework/MiPushFramework/wiki/%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BC%8F%E6%B3%A8%E5%86%8C%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%88">应用程式注册问题解决方案</a></b> and <b><a href="https://github.com/MiPushFramework/MiPushFramework/wiki/%5B%E5%B8%AE%E5%8A%A9%5D-%E5%BA%94%E7%94%A8%E6%B3%A8%E5%86%8C%E9%97%AE%E9%A2%98">[帮助] 应用注册问题</a></b>.
    ]]></string>
    <string name="status_app_not_registered_title">Unregistered</string>
    <string name="fake_enable_title">Fake as XiaoMi Phone</string>
    <string name="fake_global_enable_title">Global fake as XiaoMi Phone</string>
    <string name="fake_enable_detail">Fake the phone to Xiaomi via an Xposed module or Magisk module, enable other applications to registers. (Require Root)</string>
    <string name="fake_enable_detail_not_suggested">Not recommended for this app, it may not work properly.</string>
    <string name="fake_enable_global">Global faking enabled</string>
    <string name="helplib_action_about">About</string>
    <string name="helplib_action_issue">Feedback</string>
    <string name="helplib_action_telegram_group">Join Telegram group</string>
    <string name="helplib_title"><![CDATA[Help & Support]]></string>
    <string name="helplib_title_contact">Contact us</string>
    <string name="helplib_title_faq">Frequently asked questions</string>
    <string name="status_app_registered_error_title">Unregistered</string>
</resources>